@@ -1,5 +1,5 @@
 /*
- * Copyright © 2018 Knative Authors (knative-dev@googlegroups.com)
+ * Copyright 2020 The Knative Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -51,367 +51,320 @@ public class ConsumerDeployerVerticleTest {
   @Test
   @Timeout(value = 2)
   public void shouldAddResourceAndDeployVerticles(final Vertx vertx, final VertxTestContext context)
-    throws ExecutionException, InterruptedException {
-    final var resources = List.of(
-      resource1(),
-      resource2()
-    );
+      throws ExecutionException, InterruptedException {
+    final var resources = List.of(resource1(), resource2());
     final var numEgresses = numEgresses(resources);
     final var checkpoints = context.checkpoint(1);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+    final var consumerDeployer =
+        new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+    vertx.deployVerticle(consumerDeployer).toCompletionStage().toCompletableFuture().get();
 
-    final var reconciler = ResourcesReconcilerImpl
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler = ResourcesReconcilerImpl.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(resources)
-      .onSuccess(ignored -> context.verify(() -> {
-        assertThat(vertx.deploymentIDs()).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
-        checkpoints.flag();
-      }))
-      .onFailure(context::failNow);
+    reconciler
+        .reconcile(resources)
+        .onSuccess(
+            ignored ->
+                context.verify(
+                    () -> {
+                      assertThat(vertx.deploymentIDs()).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
+                      checkpoints.flag();
+                    }))
+        .onFailure(context::failNow);
   }
 
   @Test
   @Timeout(value = 2)
   public void shouldNotDeployWhenFailedToGetVerticle(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+      final Vertx vertx, final VertxTestContext context)
+      throws ExecutionException, InterruptedException {
 
-    final var resources = List.of(
-      resource1(),
-      resource2()
-    );
+    final var resources = List.of(resource1(), resource2());
     final var checkpoint = context.checkpoint(1);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> {
-        throw new UnsupportedOperationException();
-      },
-      100
-    );
+    final var consumerDeployer =
+        new ConsumerDeployerVerticle(
+            (resource, egress) -> {
+              throw new UnsupportedOperationException();
+            },
+            100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+    vertx.deployVerticle(consumerDeployer).toCompletionStage().toCompletableFuture().get();
 
-    final var reconciler = ResourcesReconcilerImpl
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler = ResourcesReconcilerImpl.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(resources)
-      .onFailure(ignored -> context.verify(() -> {
-        assertThat(vertx.deploymentIDs()).hasSize(NUM_SYSTEM_VERTICLES);
-        checkpoint.flag();
-      }))
-      .onFailure(context::failNow);
+    reconciler
+        .reconcile(resources)
+        .onFailure(
+            ignored ->
+                context.verify(
+                    () -> {
+                      assertThat(vertx.deploymentIDs()).hasSize(NUM_SYSTEM_VERTICLES);
+                      checkpoint.flag();
+                    }))
+        .onFailure(context::failNow);
   }
 
   @Test
   @Timeout(value = 2)
-  public void shouldStopVerticleWhenEgressDeleted(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+  public void shouldStopVerticleWhenEgressDeleted(final Vertx vertx, final VertxTestContext context)
+      throws ExecutionException, InterruptedException {
 
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addEgresses(egress1())
-        .build()
-    );
+    final var resourcesOld =
+        List.of(
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addEgresses(egress1())
+                .build());
     final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .build()
-    );
+    final var resourcesNew =
+        List.of(
+            DataPlaneContract.Resource.newBuilder().setUid("1-1234").addTopics("1-12345").build());
     final var numEgressesNew = numEgresses(resourcesNew);
 
     final var checkpoints = context.checkpoint(2);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+    final var consumerDeployer =
+        new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+    vertx.deployVerticle(consumerDeployer).toCompletionStage().toCompletableFuture().get();
 
-    final var reconciler = ResourcesReconcilerImpl
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler = ResourcesReconcilerImpl.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(resourcesOld)
-      .onSuccess(ignored -> {
+    reconciler
+        .reconcile(resourcesOld)
+        .onSuccess(
+            ignored -> {
+              context.verify(
+                  () -> {
+                    assertThat(vertx.deploymentIDs())
+                        .hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                    checkpoints.flag();
+                  });
 
-        context.verify(() -> {
-          assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
-
-        reconciler.reconcile(resourcesNew)
-          .onSuccess(ok -> context.verify(() -> {
-            assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
-            checkpoints.flag();
-          }))
-          .onFailure(context::failNow);
-      })
-      .onFailure(context::failNow);
+              reconciler
+                  .reconcile(resourcesNew)
+                  .onSuccess(
+                      ok ->
+                          context.verify(
+                              () -> {
+                                assertThat(vertx.deploymentIDs())
+                                    .hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+                                checkpoints.flag();
+                              }))
+                  .onFailure(context::failNow);
+            })
+        .onFailure(context::failNow);
   }
 
   @Test
   @Timeout(value = 2)
   public void shouldStopVerticlesWhenResourceDeleted(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+      final Vertx vertx, final VertxTestContext context)
+      throws ExecutionException, InterruptedException {
 
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2(),
-          egress3()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4()
-        ))
-        .build()
-    );
+    final var resourcesOld =
+        List.of(
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress2(), egress3()))
+                .build(),
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addAllEgresses(Arrays.asList(egress4()))
+                .build());
     final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .build()
-    );
+    final var resourcesNew =
+        List.of(
+            DataPlaneContract.Resource.newBuilder().setUid("1-1234").addTopics("1-12345").build());
     final var numEgressesNew = numEgresses(resourcesNew);
 
     final var checkpoints = context.checkpoint(2);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+    final var consumerDeployer =
+        new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+    vertx.deployVerticle(consumerDeployer).toCompletionStage().toCompletableFuture().get();
 
-    final var reconciler = ResourcesReconcilerImpl
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler = ResourcesReconcilerImpl.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(resourcesOld)
-      .onSuccess(ignored -> {
-        context.verify(() -> {
-          assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
+    reconciler
+        .reconcile(resourcesOld)
+        .onSuccess(
+            ignored -> {
+              context.verify(
+                  () -> {
+                    assertThat(vertx.deploymentIDs())
+                        .hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                    checkpoints.flag();
+                  });
 
-        reconciler.reconcile(resourcesNew)
-          .onSuccess(ok -> context.verify(() -> {
-            assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
-            checkpoints.flag();
-          }))
-          .onFailure(context::failNow);
-      })
-      .onFailure(context::failNow);
+              reconciler
+                  .reconcile(resourcesNew)
+                  .onSuccess(
+                      ok ->
+                          context.verify(
+                              () -> {
+                                assertThat(vertx.deploymentIDs())
+                                    .hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+                                checkpoints.flag();
+                              }))
+                  .onFailure(context::failNow);
+            })
+        .onFailure(context::failNow);
   }
 
   @Test
   @Timeout(value = 2)
   public void shouldStopAndStartVerticlesWhenEgressDeletedAndReAdded(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+      final Vertx vertx, final VertxTestContext context)
+      throws ExecutionException, InterruptedException {
 
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4(),
-          egress5(),
-          egress6()
-        ))
-        .build()
-    );
+    final var resourcesOld =
+        List.of(
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress2()))
+                .build(),
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addAllEgresses(Arrays.asList(egress4(), egress5(), egress6()))
+                .build());
     final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress3()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addEgresses(
-          egress4()
-        )
-        .build()
-    );
+    final var resourcesNew =
+        List.of(
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress3()))
+                .build(),
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addEgresses(egress4())
+                .build());
     final var numEgressesNew = numEgresses(resourcesNew);
 
     final var checkpoints = context.checkpoint(3);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+    final var consumerDeployer =
+        new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+    vertx.deployVerticle(consumerDeployer).toCompletionStage().toCompletableFuture().get();
 
-    final var reconciler = ResourcesReconcilerImpl
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler = ResourcesReconcilerImpl.builder().watchEgress(consumerDeployer).build();
 
     final var oldDeployments = vertx.deploymentIDs();
-    reconciler.reconcile(resourcesOld)
-      .onSuccess(ignored -> {
+    reconciler
+        .reconcile(resourcesOld)
+        .onSuccess(
+            ignored -> {
+              context.verify(
+                  () -> {
+                    assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                    checkpoints.flag();
+                  });
 
-        context.verify(() -> {
-          assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
+              reconciler
+                  .reconcile(resourcesNew)
+                  .onSuccess(
+                      ok -> {
+                        context.verify(
+                            () -> {
+                              assertThat(vertx.deploymentIDs())
+                                  .hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+                              assertThat(vertx.deploymentIDs()).containsAll(oldDeployments);
+                              checkpoints.flag();
+                            });
 
-        reconciler.reconcile(resourcesNew)
-          .onSuccess(ok -> {
-            context.verify(() -> {
-              assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
-              assertThat(vertx.deploymentIDs()).containsAll(oldDeployments);
-              checkpoints.flag();
-            });
-
-            reconciler.reconcile(resourcesOld)
-              .onSuccess(ok2 -> context.verify(() -> {
-                assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-                checkpoints.flag();
-              }));
-          })
-          .onFailure(context::failNow);
-      })
-      .onFailure(context::failNow);
+                        reconciler
+                            .reconcile(resourcesOld)
+                            .onSuccess(
+                                ok2 ->
+                                    context.verify(
+                                        () -> {
+                                          assertThat(oldDeployments)
+                                              .hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                                          checkpoints.flag();
+                                        }));
+                      })
+                  .onFailure(context::failNow);
+            })
+        .onFailure(context::failNow);
   }
 
   @Test
   @Timeout(value = 2)
   public void shouldDoNothingWhenTheStateIsTheSame(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+      final Vertx vertx, final VertxTestContext context)
+      throws ExecutionException, InterruptedException {
 
-    final var resources = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4(),
-          egress5(),
-          egress6()
-        ))
-        .build()
-    );
+    final var resources =
+        List.of(
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addAllEgresses(Arrays.asList(egress1(), egress2()))
+                .build(),
+            DataPlaneContract.Resource.newBuilder()
+                .setUid("2-1234")
+                .addTopics("2-12345")
+                .addAllEgresses(Arrays.asList(egress4(), egress5(), egress6()))
+                .build());
     final var numEgresses = numEgresses(resources);
 
     final var checkpoints = context.checkpoint(2);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+    final var consumerDeployer =
+        new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+    vertx.deployVerticle(consumerDeployer).toCompletionStage().toCompletableFuture().get();
 
-    final var reconciler = ResourcesReconcilerImpl
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+    final var reconciler = ResourcesReconcilerImpl.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(resources)
-      .onSuccess(ignored -> {
+    reconciler
+        .reconcile(resources)
+        .onSuccess(
+            ignored -> {
+              final var deployments = vertx.deploymentIDs();
 
-        final var deployments = vertx.deploymentIDs();
+              context.verify(
+                  () -> {
+                    assertThat(deployments).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
+                    checkpoints.flag();
+                  });
 
-        context.verify(() -> {
-          assertThat(deployments).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
-
-        reconciler.reconcile(resources).onSuccess(ok -> context.verify(() -> {
-          assertThat(vertx.deploymentIDs()).containsAll(deployments);
-          checkpoints.flag();
-        }));
-      })
-      .onFailure(context::failNow);
+              reconciler
+                  .reconcile(resources)
+                  .onSuccess(
+                      ok ->
+                          context.verify(
+                              () -> {
+                                assertThat(vertx.deploymentIDs()).containsAll(deployments);
+                                checkpoints.flag();
+                              }));
+            })
+        .onFailure(context::failNow);
   }
 
   @Test
   public void shouldThrowIfEgressesInitialCapacityIsLessOrEqualToZero(final Vertx vertx) {
-    Assertions.assertThrows(IllegalArgumentException.class, () -> new ConsumerDeployerVerticle(
-      (resource, egress) -> null,
-      -1
-    ));
+    Assertions.assertThrows(
+        IllegalArgumentException.class,
+        () -> new ConsumerDeployerVerticle((resource, egress) -> null, -1));
   }
 
-  private static int numEgresses(Collection<DataPlaneContract.Resource> resources) {
+  private static int numEgresses(final Collection<DataPlaneContract.Resource> resources) {
     return resources.stream().mapToInt(DataPlaneContract.Resource::getEgressesCount).sum();
   }
 }
